assets/css/style.css
/* Copyright Nathan Chapman, 2015 */

/* ---- GLOBAL ---- */

* { font-family:"Flama"; }

html, body { height:100%; }

h1, h2, h3, h4, h5, h6 { font-family:"Flama Thin"; font-weight:normal !important; }

a:link, a:visited { font-family:inherit; color:#ED8046; }
a:hover, a:active { text-decoration:none; border-bottom:1px solid; }

.btn { border-radius:0; }
.btn.btn-primary { background-color:#ED8046; color:#fff; border:none; }
.btn.btn-primary:hover, .btn-prinary:active { }

p { font-size:1.3em; font-family:"Flama Light"; line-height:1.5em; margin-bottom:1.5em; }

dl { font-size:1.15em; }
dt { font-family:"Flama"; text-transform:uppercase; letter-spacing:1px; font-size:0.8em; }
dd { font-family:"Flama Light"; margin-bottom:1.5em; }

/* ---- NAVBAR ---- */
nav.navbar { background-color:transparent; border-bottom:none; font-size:1.2em; }
nav .navbar-header a.navbar-brand { font-family:"Flama Ultra"; font-size:1.2em; color:#aaa; }
nav button.navbar-toggle { color:#eee; padding:9px 16px; }
nav button.navbar-toggle:hover { color:#666; }
nav ul { font-size:0.85em; text-transform:uppercase; }
nav a {  transition:all 0.25s ease; }
nav ul.nav.navbar-nav li a:hover, nav ul.nav.navbar-nav li a:active { color:#ED8046; border-bottom:none; }

/* ---- HOME // GLOBAL ---- */
section h3 { margin:2em; }
section h3 a:link, section h3 a:visited, section h3 a:active, section h3 a:hover { color:#333; border-bottom:none; }
section h3 span { border:#515151 1px solid; font-family:"Flama Light"; font-size:1.45em; text-transform:uppercase; text-align:center; padding:7px 50px; }


/* ---- HOME // COVER ---- */
header.jumbotron.cover { height:100%; width:100%; background:no-repeat center center fixed; background-size:cover; webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-attachment:scroll; color:#fff; -webkit-transform-style:preserve-3d;  -moz-transform-style:preserve-3d; transform-style:preserve-3d; overflow:hidden; margin-bottom:0px; }
header.jumbotron.cover .container { position:relative; top:45%; -webkit-transform:translateY(-45%); -ms-transform:translateY(-45%); transform:translateY(-45%); }
header.jumbotron.cover .container-btn { position:relative; top:65%; -webkit-transform:translateY(-65%); -ms-transform:translateY(-65%); transform:translateY(-65%); }
header.jumbotron.cover .container-btn .btn { border:#bbb 1px solid; color:#bbb; background:rgba(255,255,255,0.05); padding:8px 15px 12px 15px;}
header.jumbotron.cover .container-btn .btn:hover { color:#eee; background:rgba(255,255,255,0.25); }
header.jumbotron.cover h1 { text-transform:uppercase; padding:10px; background:rgba(0,0,0,0.25); border:solid 1px #fff; font-size:3.5em; overflow:hidden; }
header.jumbotron.cover h2 { font-size:1.15em; text-transform:uppercase; font-family:"Flama Ultra"; }

@media only screen and (min-width : 768px) { /* .sm size */
header.jumbotron.cover h1 { font-size:4em; }
header.jumbotron.cover h2 { }
}
@media only screen and (min-width : 992px) { /* .md size */
header.jumbotron.cover h1 { font-size:5em; }
header.jumbotron.cover h2 { font-size:1.25em; margin-top:0.5em; }
}
@media only screen and (min-width : 1200px) { /* .lg size */
header.jumbotron.cover h1 { font-size:6em; }
header.jumbotron.cover h2 { font-size:1.3em; margin-top:1.5em; }
}

/* ---- HOME // WELCOME ---- */
section#welcome { display:table; height:auto; width:100%; position:relative; background-color:#f9f9f9; }
section#welcome .image-container { background-size:cover; background-position:top center; height:100%; overflow:hidden; padding:0; position:absolute; top:0; }
section#welcome .container { padding:25px 0 75px; }
section#welcome p.text-left { padding:0px 5px; }
section#welcome p.lead { font-size:1.65em; font-weight:normal; font-family:"Flama Light"; }
section#welcome p:not(lead) { }

/* ---- HOME // CALLOUT + STATS ---- */
section#callout, section#stats { background-repeat:no-repeat; background-position:center -50px; background-size:cover; background-attachment:scroll; display:table; height:auto; padding:45px 0 35px; width:100%; }
section#callout h4, section#stats h4 { color:#fff; font-size:2em; text-transform:uppercase; font-family:"Flama"; margin-bottom:1em; letter-spacing:3px; }

section#stats { background-position:center center; }
section#stats div.stat { margin:5px 0 5px; }
section#stats div.stat div { font-family:"Flama Light"; font-size:1.25em; text-shadow: 0px 0px 17px rgba(0, 0, 0, 0.84); }
section#stats div.stat div span { font-family:"Flama"; font-size:2em; }

@media only screen and (min-width : 768px) { /* .sm size */
section#callout { background-position:center -240px; }
section#stats { background-position:center -250px; }
}
@media only screen and (min-width : 992px) { /* .md size */
section#callout, section#stats { background-position:center -320px; }
}
@media only screen and (min-width : 1200px) { /* .lg size */
section#callout, section#stats { background-attachment:fixed; background-position:bottom center; }
section#stats { font-size:1.25em; background-position:center center; }
}



/* ---- HOME // WORK ---- */
section#work { margin:50px 0 125px 0; }
.portfolioContainer div { padding:1px 1px 0 0; margin:0;  }
.portfolioContainer div div { padding:none;; }
.portfolioContainer .work-description { position:absolute; top:50%; -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%); transform:translateY(-50%); width:100%; color:#fff; }
.portfolioContainer .work-description h4 { text-transform:uppercase; font-family:"Flama"; letter-spacing:1px; }
.portfolioContainer .work-description span { text-transform:uppercase; font-family:"Flama"; font-size:0.95em; }
.portfolioContainer div:hover { opacity:0.8; }
#filters a:link, #filters a:visited { text-transform:uppercase; color:#999; border-bottom:none; margin:0 10px; font-size:1em; }
#filters a:hover, #filters a:active { color:#666; }
#filters a.current { color:#ed8046; }

@media only screen and (min-width:768px) {
}
/* ... */

